# sonic-fib

./: README.md  configure.ac
debian/: changelog  control  libnexthopgroup-dev.install  libnexthopgroup-dev.links  libnexthopgroup.install
schema/: NextHopGroupFull.json
scripts/: render_schema.py
src/: Makefile.am
src/c-api/: nexthopgroup_capi.cpp  nexthopgroup_capi.h
templates/: nexthopgroupfull.cpp.j2  nexthopgroupfull.h.j2  nexthopgroupfull_json.h.j2
templates/references/: nexthopgroupfull.cpp  nexthopgroupfull.h  nexthopgroupfull_json.h
tests/: Makefile.am  c_api_ut.cpp  main.cpp  nexthopgroupfull_ut.cpp
